--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
+title:               Anglemonde
+tagline:             Observatoire de l'anglais
 url:                 http://getpoole.com
 paginate:            1
 baseurl:             ""
@@ -17,9 +17,9 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              AngryFrenchGuy
+  url:               https://twitter.com/angryfrenchguy
+  email:             angryfrenchguy@gmail.com
 
 # Custom vars
 version:             2.0.0
