--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:           pretty
 # Setup
 title:               Anglemonde
 tagline:             Observatoire de l'anglais
-url:                 http://getpoole.com
+url:                 http://angryfrenchguy.github.io
 paginate:            10
 baseurl:             ""
 
