--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title:               Anglemonde
 tagline:             Observatoire de l'anglais
 url:                 http://angryfrenchguy.github.io
 paginate:            10
-baseurl:             ""
+baseurl:             "http://angryfrenchguy.github.io"
 
 # Assets
 #
